--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4.1.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4.14",
     "typescript": "^5"
   }
 }
